# parser-fuzzer

./: .gitmodules  README.md  bnf-to-pest.py  bnf-to-ungrammar.py  grammar.bnf  grammar.pest  grammar.ungram  parse_test_data.sh  requirements.txt  strip_weights.py
generator_as_pest_fork/generator/: Cargo.toml
generator_as_pest_fork/generator/src/: cfg_generator.rs  generator.rs  lib.rs
generator_as_pest_fork/meta/src/: ast.rs  grammar.pest  parser.rs  validator.rs
generator_as_pest_fork/meta/src/optimizer/: factorizer.rs  mod.rs  restorer.rs  rotater.rs  skipper.rs
generator_as_pest_fork/pest/: Cargo.toml
generator_as_pest_fork/pest/src/: lib.rs  parser.rs
generator_as_pest_fork/vm/src/: lib.rs
pest_based_noir_parser/: Cargo.toml
pest_based_noir_parser/examples/: parse_noir.rs  sqrt.nr
pest_based_noir_parser/src/: lib.rs
tester_for_pest/: Cargo.toml
tester_for_pest/sample_code/: program1  program10_constructor_field  program11_integer_literal  program12_constructors  program13_semicolon  program14_semicolon  program16_multiline_string  program17_if_then_brace  program18_poor_string  program19_weird_program  program2  program4  program4b  program5  program6_unexpected_impl  program7_global_generic  program8_huge_literal  program9_bad_impl
tester_for_pest/src/: main.rs
tester_for_pest/work/: program1a  program1b  program1c  program2  program3
