[package]
name = "pest_based_noir_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pest = "2.6"
# pest_derive = "2.6"
pest = { path = "../generator_as_pest_fork/pest/" }
pest_derive = { path = "../generator_as_pest_fork/derive/" }
